--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,8 +1,15 @@
 FROM python:3.11-slim
 WORKDIR /app
-RUN apt-get update && apt-get install -y --no-install-recommends build-essential libxml2 libxslt1.1 && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    libxml2 \
+    libxslt1.1 \
+    libffi-dev \
+    python3-dev \
+ && rm -rf /var/lib/apt/lists/*
 COPY requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
+RUN python -m spacy download pt_core_news_md
 COPY . /app
 EXPOSE 8000
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
