Refactor API package layout

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,27 +1,18 @@
 FROM python:3.11-slim
-
 WORKDIR /app
-
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONPATH=/app
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential \
-    libxml2 \
-    libxslt1.1 \
-    libffi-dev \
-    python3-dev \
+    build-essential libxml2 libxslt1.1 libffi-dev python3-dev \
  && rm -rf /var/lib/apt/lists/*
 
-COPY api/requirements.txt /tmp/requirements.txt
-RUN pip install --no-cache-dir -r /tmp/requirements.txt
-RUN python -m spacy download pt_core_news_md
+COPY requirements.txt /app/requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt && \
+    python -m spacy download pt_core_news_md
 
-COPY app /app/app
-COPY api /app
-
+COPY . /app
 RUN mkdir -p /app/out /app/data /app/models
 
 EXPOSE 8000
-
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
